# redis-populator

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
config/: config.yaml
example/: .env  docker-compose.yaml
src/: config.rs  main.rs
src/data/: config.rs
