[package]
name = "redis-populator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
pulldown-cmark = "0.13.0"
reqwest = { version = "0.12.23", features = ["blocking"] }
rustis = "0.16.1"
serde = "1.0.219"
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["full"] }
