[package]
name = "redis-populator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
dotenv = "0.15.0"
pulldown-cmark = "0.13.0"
reqwest = { version = "0.12.23", features = ["rustls-tls"] }
rustis = { version = "0.16.1", features = ["tokio-rustls"] }
serde = "1.0.219"
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["full"] }
